argocd.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: argocd
  name: argocd
spec:
  replicas: 5
  selector:
    matchLabels:
      app: argocd
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: argocd
    spec:
      containers:
      - image: argoproj/rollouts-demo:green
        name: rollouts-demo
        resources: {}
status: {}
