cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cluster-ip
  name: cluster-ip
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cluster-ip
  type: ClusterIP
status:
  loadBalancer: {}
