ingress.svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: demo
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: argocd
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
